--- a/src/personal-app/shared-styles.html
+++ b/src/personal-app/shared-styles.html
@@ -7,7 +7,8 @@
       :root{
         --custom-orange: #F3752B;
         --custom-brown: #1F1300;
-        --custom-blue: #0F7173;
+        /*--custom-blue: #0F7173;*/
+        --custom-blue: #53D8FB;
         --custom-gray: #54494B;
         --custom-white: #FCFCFC;
       };
@@ -20,11 +21,10 @@
       }
       .card{
         background-color: var(--custom-white);
-        /*background-image: url(../../images/background.png);*/
         border-radius: 5px;
         box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.14), 0 4px 10px 0 rgba(0, 0, 0, 0.12), 0 6px 2px -4px rgba(0, 0, 0, 0.2);
-        height: 80vh;
-        padding: 16px;
+        height: 75vh;
+        padding: 30px;
         margin-top: 16px;
         overflow: auto;
       }
