--- a/src/personal-app/personal-app.html
+++ b/src/personal-app/personal-app.html
@@ -91,7 +91,7 @@
         <app-header condenses reveals effects="waterfall">
           <paper-toolbar>
             <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div class="title">Gradecam</div>
+            <div class="title">Marijan Gradecak</div>
             <span style="flex: 1;"></span>
             <paper-tabs selected=0>
               <paper-tab>
